--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
         <div class="caixa-principal">
             <h1> Você decide o futuro da IA </h1>
             <div class="caixa-perguntas">
-
+                Quais são as caixa-perguntas?
             </div>
             <div class="caixa-alternativas">
+                <button> Botao 1</button>
+                <button> Botao 2</button>
 
             </div>
             <div class="caixa-resultado">
